// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#counterColor manual should turn the color to green if have negation value 1`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "fontSize": 30,
          "fontWeight": "bold",
        },
        Object {
          "color": "green",
        },
      ]
    }
  >
    2
  </Text>
</View>
`;

exports[`#counterColor manual should turn the color to red if have negation value 1`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "fontSize": 30,
          "fontWeight": "bold",
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    -1
  </Text>
</View>
`;

exports[`#counterColor snapshot should turn the color from red to green if have negation value 1`] = `
Object {
  "color": "green",
  "fontSize": 30,
  "fontWeight": "bold",
}
`;

exports[`#counterColor snapshot should turn the color to green if have negation value 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "green",
        "fontSize": 30,
        "fontWeight": "bold",
      }
    }
  >
    2
  </Text>
</View>
`;

exports[`#counterColor snapshot should turn the color to red if have negation value 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "red",
        "fontSize": 30,
        "fontWeight": "bold",
      }
    }
  >
    -1
  </Text>
</View>
`;
